# website

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
.github/workflows/: release.yml
apecs/: __init__.py  asgi.py  urls.py  wsgi.py
apecs/admin/: __init__.py  apps.py  sites.py
apecs/api/: __init__.py  apps.py
apecs/auth/: admin.py  apps.py  urls.py
apecs/auth/migrations/: 0001_initial.py
apecs/auth/models/: __init__.py  user.py
apecs/cms/: app.py  apps.py
apecs/core/: app.py  urls.py
apecs/settings/: base.py  dev.py  prod.py  util.py
